issue #4 - refactoring